# investment-tracker

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
docker/dev/: Dockerfile  create_test_db.sh
migrations/: env.py  script.py.mako
migrations/versions/: 165f387b0a47_add_portfolio_and_asset_models.py  479f5c187cc3_initial_migration.py  6e76f4d40d3c_add_alerts_table.py  bb1b0a57f4c4_initial_migration_users.py  f7ae2fb1bdca_add_portfolio_history_table.py
src/: main.py
src/core/: celery_app.py  config.py  database.py  exceptions.py  handlers.py  logging.py  models.py  redis.py  security.py
src/modules/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
src/modules/health/: router.py
src/modules/market_data/: client.py  constants.py  service.py  tasks.py
src/modules/notifications/: service.py
src/modules/portfolio/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/scripts/: seed_db.py
tests/: conftest.py
tests/integration/: test_alerts_api.py  test_auth_api.py  test_history_api.py  test_portfolio_api.py  test_portfolio_history.py  test_portfolio_models.py  test_portfolio_repository.py
tests/unit/: test_auth_service.py  test_core.py  test_main.py  test_market_data.py  test_portfolio_service.py  test_tasks.py
